<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#FF9DD5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/Rating"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/ratings"
            android:textAlignment="center"
            tools:ignore="RtlCompat" />

        <LinearLayout
            android:layout_width="34dp"
            android:layout_height="match_parent"

            android:orientation="vertical"

            android:paddingLeft="5dp"
            tools:ignore="RtlHardcoded,RtlSymmetry">

            <ImageView
                android:id="@+id/IvContactName"
                android:layout_width="30dp"
                android:layout_height="18dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/person" />

            <ImageView
                android:id="@+id/IvLocation"
                android:layout_width="30dp"
                android:layout_height="18dp"
                android:layout_marginBottom="3dp"
                android:src="@drawable/location" />

            <ImageView
                android:id="@+id/IvPhone"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:src="@drawable/phone" />

            <ImageView
                android:id="@+id/IvDescription"
                android:layout_width="30dp"
                android:layout_height="18dp"

                android:src="@drawable/description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="99dp"
            android:layout_weight="8"
            android:orientation="vertical"

            android:paddingLeft="5dp"
            tools:ignore="RtlHardcoded,RtlSymmetry">

            <TextView
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/restaurant_name" />

            <TextView
                android:id="@+id/Location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/location" />

            <TextView
                android:id="@+id/Phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/Description"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/description" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/IvCall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/call" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/message"
                android:id="@+id/Message"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>